--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
       "type": "node",
       "request": "launch",
       "name": "Launch Program",
-      "program": "${workspaceFolder}/bin/seeds.js",
+      "program": "${workspaceFolder}/bin/www",
       "skipFiles": ["<node_internals>/**"]
     }
   ]
